app/styles/signup.scss
body {
	background: url('../images/bgtexture.jpg');
	font-family: ubuntu;
	margin: 0;
}

textarea, input {
	outline-color: rgb(119, 255, 119);
}

button, button:hover, button:active {
	outline: 0 !important;
}

.sign-in {
	background: rgba(255, 255, 255, 0.5);
	border-radius: 16px;
	width: 450px;
	margin: -16px auto 0;
	padding: 32px 20px 20px;
}

.reg-box {
	width: 450px;
	margin: 90px auto 0;
	background: rgba(255, 255, 255, 0.5);
	border-radius: 16px;

	h2 {
		font-size: 24px;
		border-bottom: 1px solid #808080;
		padding: 14px 25px 14px;
		background: #FFF;
		border-radius: 16px 16px 0 0;
		color: #808080;
		text-shadow: 1px 1px 0px #E4E4E4;
		font-weight: normal;
		margin: 0;
	}
}

form {
	margin: 0;
}

.signup-box {
	padding: 25px;
}

.clearfix {
	overflow: auto;
}

.lfloat {
	float: left;
}

.rfloat {
	float: right;
}

.mbm {
	margin-bottom: 10px;
}

.inputtext {
	width: 100%;
	font-size: 16px;
	border: 1px solid #E3FFA6;
	padding: 6px;
	margin: 2px 0;
}

.btn {
	border: none;
	font-size: 16px;
	padding: 6px 10px;
	border-radius: 6px;
	color: #FFF;
	box-shadow: 0px 2px #435520;
	background: -webkit-linear-gradient(top, #5E7929, #8BAC4A);
	background: -moz-linear-gradient(top, #5E7929, #8BAC4A);
	background: linear-gradient(top, #5E7929, #8BAC4A);
	cursor: pointer;
	width: 100px;
	margin-top: 8px;

	&:hover {
		background: -webkit-linear-gradient(top, #A2BE6C, #BEE78B);
		background: -moz-linear-gradient(top, #A2BE6C, #BEE78B);
		background: linear-gradient(top, #A2BE6C, #BEE78B);
		color: #32631B;
	}

	&:active {
		margin: 10px 0 0;
		box-shadow: none;
		background: -webkit-linear-gradient(top, #A2BE6C, #BEE78B);
		background: -moz-linear-gradient(top, #A2BE6C, #BEE78B);
		background: linear-gradient(top, #A2BE6C, #BEE78B);
		color: #32631B;
	}
}

.hidden-elem {
	display: none;
}

@media (max-width: 600px) {
	.reg-box {
		width: 94%;
	}
	.sign-in {
		width: 94%;
	}
}

@media (min-width: 768px) {
}

